client card overflow issues fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,7 +56,7 @@ h3 {
   .bg-black-shade {
     position: absolute;
     background-color: color(black);
-    opacity: 0.8;
+    opacity: 0.7;
     width: inherit;
     height: inherit;
     z-index: -999;
@@ -257,11 +257,12 @@ h3 {
         .client-name {
           font-size: 1rem;
           font-weight: bold;
-          padding-bottom: 1rem;
         }
         .tenure {
           font-size: 0.6rem;
-          font-weight: bold;
+          font-weight: 600;
+          padding-top: 0.25rem;
+          padding-bottom: 0.25rem;
         }
       }
     }
